# const_struct

./: Cargo.toml  LICENSE-MIT  README-ja.md  README.md
crates/const_struct/: Cargo.toml
crates/const_struct/src/: keeptype.rs  lib.rs  prelude.rs  primitive.rs  struct_prim.rs  util_macro.rs
crates/const_struct/src/primitive/: array.rs  enum_ty.rs  mod.rs  option.rs  primitive.rs  primitive_ty.rs  struct_ty.rs  tuple.rs  unit.rs
crates/const_struct_derive/: Cargo.toml
crates/const_struct_derive/src/: const_compat.rs  const_struct_derive.rs  ident.rs  lib.rs  macro_alt.rs  match_end_with_ty.rs  parse_value.rs  rewriter.rs  util.rs  util_macro.rs
crates/const_struct_derive/src/parse_value/: array.rs  mod.rs  path.rs  struct_ty.rs  tuple.rs
crates/const_struct_derive/src/rewriter/: change_macro.rs  const_compat.rs  mod.rs
crates/test_code/: Cargo.toml
crates/test_code/src/: ex.rs  generics.rs  main.rs  non_generics.rs  parse_value.rs  pre.rs  primitive.rs  setting.rs
crates/test_gen_code/: Cargo.toml
crates/test_gen_code/src/: main.rs
crates/test_trait_code/: Cargo.toml  expand.rs
crates/test_trait_code/src/: generics.rs  generics_with_const.rs  hash_bridge.rs  keeptype.rs  main.rs  non_generics.rs  pre.rs  primitive.rs  setting.rs  struct_prim.rs  tester.rs  with_const_generics.rs
crates/test_trait_code_old/: Cargo.toml
crates/test_trait_code_old/src/: generics_with_const.rs  main.rs  pre.rs  primitive.rs  setting.rs  struct_prim.rs  tester.rs
crates/test_trait_code_old_old/: Cargo.toml
crates/test_trait_code_old_old/src/: primitive.rs  setting.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
