[workspace]
resolver = "2"
members = ["crates/const_struct_derive", "crates/test_code", "crates/test_trait_code_old_old", "crates/test_trait_code", "crates/test_gen_code", "crates/const_struct", "crates/tests"]
default-members = ["crates/const_struct_derive", "crates/const_struct", "crates/test_code", "crates/tests"]

[workspace.package]
authors = ["oligami <nziq53@gmail.com>"]
version = "0.4.4"
edition = "2021"
description = "macro that allows const structures to be passed as const generics"
license = "MIT"
rust-version = "1.80.0"
keywords = ["const", "derive", "macro", "no_std", "const_generics"]
repository = "https://github.com/oligamiq/const_struct"
documentation = "https://docs.rs/const_struct"
homepage = "https://docs.rs/const_struct"

[workspace.dependencies]
const_struct_derive = { path = "crates/const_struct_derive" }
const_struct = { path = "crates/const_struct" }

[workspace.metadata.release]
tag = false

# https://doc.rust-lang.org/cargo/reference/workspaces.html
# https://zenn.dev/eduidl/articles/rust-workspace-tips

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0
