[package]
name = "const_struct"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
const_struct_derive.workspace = true
paste = "1.0.15"

[package.metadata.release]
tag = true
tag-prefix =""
