[package]
name = "const_struct"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
rust-version.workspace = true
keywords = ["const", "derive", "macro", "no_std", "const_generics"]
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish = true

[dependencies]
# const_struct_derive.workspace = true
const_struct_derive = "0.2.0"
paste = "1.0.15"

[package.metadata.release]
tag = true
tag-prefix =""
