[package]
name = "const_struct"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
rust-version.workspace = true
keywords = ["const", "derive", "macro", "no_std", "const_generics"]
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish = true

[dependencies]
# const_struct_derive.workspace = true
crc = "3.2.1"
const_struct_derive = "0.5"
paste = "1.0.15"

[features]
rand_support = ["const_struct_derive/rand_support"]

[package.metadata.release]
tag = true
tag-prefix =""
