[package]
name = "const_struct_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "2.0", features = ["full", "extra-traits"]}
convert_case = "0.6"

[package.metadata.release]
tag = false
