[package]
name = "const_struct_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = {version = "2.0.74", features = ["full", "extra-traits"]}
convert_case = "0.6.0"
darling = "0.20.10"

[package.metadata.release]
tag = false


