[package]
name = "test_trait_code"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
publish = false

[package.metadata.release]
release = false

[dependencies]
const_struct_derive.workspace = true
paste = "1.0"
crc = "3.2.1"
no-std-compat = { version = "0.4.1", features = ["alloc", "compat_macros"] }
